##Text encoding: utf-8

2008-11-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: do not add the hydrogens item when there are
	no attached hydrogens.
	* libs/gcp/bond.cc: a better fix for double bonds drawing.
	* libs/gcp/fragment.cc: alwayes set the atom as child.
	* libs/gcp/theme.cc: call g_type_init.
	* libs/gcu/object.h: fixed documentation.
	* libs/gcu/residue.cc: don't free lang before using it.
	* plugins/paint/selection/selectiontool.cc: display an error message box
	instead crashing when a group creation failed.

2008-11-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.10.2).
	* libs/gcp/bond.cc: fixed second line for a double bond which was too
	long in some cases.

2008-11-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumview.cc: on_max_changed calls OnMaxChanged.

2008-11-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumdoc.cc: enhance data loading [#24719] and always
	update the invert axis check box.

2008-11-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: delete previous version when saving.
	* libs/gcu/object.cc: remove objects from dirty objects list when
	destroying.
	* plugins/paint/bonds/chaintool.cc: fixed when the chain starts from a
	new atom.
	* programs/crystal/document.cc: delete previous version when saving.

2008-11-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: prefer a cycle with cis configuration when drawing
	double bonds. [#24802]

2008-11-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/bondtool.cc: don't allow bonds between molecules not
	in the same group.
	* plugins/paint/bonds/chaintool.cc: ditto.

2008-11-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/chaintool.cc: do not create more than one operation
	(fixes an undo/redo issue) and correctly check if the addition of bonds
	is really possible.
